--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^30.1.2"
+    "jest": "^30.1.2",
+    "jest-teamcity": "^1.12.0"
   }
 }
